--- a/index.html
+++ b/index.html
@@ -1,63 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Revolusi Industri 1.0 hingga 4.0</title>
-    <link rel="stylesheet" href="sejarah.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Responsive Portfolio Website Design</title>
+    <link rel="stylesheet" href="style.css">
+    
+    <link rel="stylesheet" href="homes.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Revolusi Industri</h1>
-            <nav>
-                <ul>
-                    <li><a href="homes.html">Home</a></li>
-                </ul>
-            </nav>
+     <div class="hero-header">
+        <div class="wrapper">
+            <header>
+                <div class="logo">
+                    <i class="fa-solid fa-a"></i>
+                    <div class="logo-text">Mugni Labiib</div>
+                </div>
+                <nav>
+                    <div class="togglebtn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul class="navlinks">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="sertifikat.html">Sertifikat</a></li>
+                        <li><a href="about.html">about</a></li>
+                        <li><a href="Education.html">Education</a></li>
+                        <li><a href="contant.html">Contact</a></li>
+                        <li><a href="index.html">Projek</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="container">
+                 <div class="hero-pic">
+                    <img src="WhatsApp Image 2024-11-08 at 18.57.16_d0aaaf05.jpg" alt="profile pic">
+                 </div>
+                 <div class="hero-text">
+                    <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
+                    <h1>Mugni Labiib</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta delectus dolorum 
+                        quibusdam maiores magni quod rem in porro, laborum, laudantium ex repellendus explicabo, 
+                        autem molestiae!
+                    </p>
+
+                    <div class="btn-group">
+                       <a href="#" class="btn active">Download CV</a>
+                       <a href="#" class="btn">Contact</a>
+                    </div>
+
+                    <div class="social">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                        <a href="#"><i class="fa-brands fa-pintrest"></i></a>
+                    </div>
+                 </div>
+            </div>
         </div>
-    </header>
-    
-    <main class="container">
-        <section>
-            <h2>Revolusi Industri 1.0</h2>
-            <div class="content">
-                <img src="download.jpeg" alt="Mesin uap">
-                <p>Revolusi Industri 1.0 dimulai pada akhir abad ke-18 dengan penemuan mesin uap oleh James Watt...</p>
-            </div>
-        </section>
+     </div>
+     <!---typed js for typing text effect-->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
+     <script>
+        /** creating button click show hide navbar **/
+        var togglebtn=document.querySelector(".togglebtn");
+        var nav=document.querySelector(".navlinks");
+        var links=document.querySelector(".navlinks li");
 
-        <section>
-            <h2>Revolusi Industri 2.0</h2>
-            <div class="content">
-                <img src="download (1).jpeg" alt="Jalur perakitan">
-                <p>Revolusi Industri 2.0 terjadi pada akhir abad ke-19 dan awal abad ke-20 dengan pengenalan listrik...</p>
-            </div>
-        </section>
+        togglebtn.addEventListener("click", function(){
+            this.classList.toggle("click");
+            nav.classList.toggle("open");
+        })
 
-        <section>
-            <h2>Revolusi Industri 3.0</h2>
-            <div class="content">
-                <img src="download (2).jpeg" alt="Komputer dan robot">
-                <p>Revolusi Industri 3.0 dimulai pada pertengahan abad ke-20 dengan munculnya komputer dan otomatisasi...</p>
-            </div>
-        </section>
-
-        <section>
-            <h2>Revolusi Industri 4.0</h2>
-            <div class="content">
-                <img src="download (3).jpeg" alt="Teknologi AI dan IoT">
-                <p>Revolusi Industri 4.0 adalah era saat ini yang ditandai dengan integrasi teknologi canggih...</p>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>© 2023 Revolusi Industri. All rights reserved.</p>
-        </div>
-    </footer>
+        var typed=new Typed(".input",{
+            strings:["Frontend Developer","UX Designer","Web Developer"],
+            typedSpeed:70,
+            backSpeed:55,
+            loop:true
+        })
+     </script>
 </body>
 </html>
